dev/meta/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev.com
    http:
      paths:
        - path: /argo
          backend:
            serviceName: argocd-service
            servicePort: 8080
        - path: /
          backend:
            serviceName: hello-world-service
            servicePort: 8080
